# bevy_gameplay_effects

./: Cargo.toml  README.md
examples/: stress_test.rs
src/: calculation.rs  effects.rs  enum_macro.rs  events.rs  gameplay_stats.rs  lib.rs  stats.rs  timing.rs
