[package]
name = "bevy_gameplay_effects"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = ">=0.16.1" }
smallvec = { version = ">=1.15.1" }
bevy_hierarchical_tags={version = "0.1" ,git="https://github.com/emberlightstudios/bevy_hierarchical_tags.git"}
